k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: tradesphere
  labels:
    name: tradesphere
    app.kubernetes.io/managed-by: kubectl
